Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2004-09-17  Erik Grinaker <erikg@codepoet.no>

	* prepend the current account username to the username dropdown

	* activate searchbar button when hitting return in the entry

	* syncronize searchbar entry text with the entry searcher

2004-09-16  Erik Grinaker <erikg@codepoet.no>

	* copy password or other secret to clipboard when launching
	an account

	* added the users username to the username dropdown

2004-09-15  Erik Grinaker <erikg@codepoet.no>

	* use 18x18 pixel icons in the treeview

2004-09-13  Erik Grinaker <erikg@codepoet.no>

	* adapted the EntryDropdown to work for the search dialog

	* pasting entries now works again

	* the edit entry dialog now works again

	* use improved entry edit widgets

	* display undo/redo actions in menu items again

	* set priority flag on add and launch entry items

2004-09-11  Erik Grinaker <erikg@codepoet.no>

	* the gconf schema check didn't use the DIR_GCONFSCHEMAS
	variable

2004-09-09  Erik Grinaker <erikg@codepoet.no>

	* use new ConboBox widget for dropdown menus

	* the @schemadir@ make variable wasn't properly expanded

2004-09-06  Erik Grinaker <erikg@codepoet.no>

	* use the gnome icon theme instead of own icons

	* fixed a bug where the domain field tooltip was used as the
	field name

	* the .desktop file now uses the base icon name, so it is
	looked up in the icon theme

	* added new application icons

2004-09-05  Erik Grinaker <erikg@codepoet.no>

	* renamed data/images to data/icons

2004-09-04  Erik Grinaker <erikg@codepoet.no>

	* port application ui to gtk.UIManager

	* the user may attempt to continue running Revelation when
	an unhandled exception occurs

	* the searchbar follows the detachable toolbar setting in gnome

2004-08-31  Erik Grinaker <erikg@codepoet.no>

	* try libs in pythonpath from configure first

2004-08-30  Erik Grinaker <erikg@codepoet.no>

	* use new file dialog from GTK+ 2.4
